# dnd-dm-agent

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  refactor-plan.md  ruff.toml
.claude/: active_campaign.txt  dnd-dm-agent-skill.md
available_campaigns/a_most_potent_brew/: encounters.md  npcs.md
campaigns/a_most_potent_brew/: campaign_skeleton.md
campaigns/a_most_potent_brew_sapphire_adventure/: campaign_guide.md  campaign_log.md  campaign_progress.md  locations.md
campaigns/lost_mine_of_phandelver_test_campaign/: campaign_log.md  campaign_progress.md
config/: __init__.py  llm_engine.py
design/: story_module_architecture.md
dnd_dm_agent/: agent.py  claude_agent.py  interactive.py  logging_config.py  server.py
dnd_dm_agent/knowledge/: __init__.py  classes_5e.md  session_management_guide.md
dnd_dm_agent/tools/: __init__.py  campaign_instance_tools.py  campaign_tools.py  character_schema.py  character_sheet.md.jinja  character_tools.py  character_validation.py  knowledge_tools.py  session_management_tools.py  session_tools.py  utility_tools.py
dnd_dm_agent/utils/: logger.py
docs/: FRONTEND_PLAN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
test-agent/: agent.py
tests/: __init__.py  test_campaign_instance_tools.py  test_campaign_tools.py  test_character_tools.py  test_claude_agent.py  test_dice.py  test_knowledge_tools.py  test_llm_engine.py  test_scripts.txt  test_session_tools.py  test_utility_tools.py
tests/integration/: __init__.py  test_claude_agent.py
(+45 files in other folders)
