[project]
name = "dnd-dm-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.0",
    "claude-agent-sdk>=0.1.27",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
